--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         h1 {
             color: #7289DA;
         }
+        h2 {
+            color: #4b4b4b;
+            font-size: 24px;
+        }
         p {
             font-size: 18px;
             color: #333;
@@ -44,14 +48,60 @@
             border-radius: 50%;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
+        .departments, .staff {
+            margin-top: 30px;
+            text-align: left;
+            padding: 20px;
+        }
+        .footer {
+            margin-top: 50px;
+            padding: 10px;
+            background-color: #7289DA;
+            color: white;
+            text-align: center;
+            border-radius: 5px;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            padding: 5px 0;
+        }
     </style>
 </head>
 <body>
     <div class="container">
+        <!-- Logo Section -->
         <img src="https://cdn.discordapp.com/attachments/1303114419290509483/1303114456993370163/IMG_3465.webp?ex=672a9369&is=672941e9&hm=94a71225ac600cb35c7ae94a1ada9a40e4cad5e3b3b7678020461f8e37997053&" alt="Discord Server Logo">
+        
+        <!-- Welcome Section -->
         <h1>Welcome to Our Discord Server!</h1>
         <p>Join our Discord community where we talk about games, coding, and have a lot of fun together!</p>
         <a href="https://discord.gg/HEWuD588">Join Our Discord</a>
+
+        <!-- Departments Section -->
+        <div class="departments">
+            <h2>Our Departments</h2>
+            <ul>
+                <li>🚓 Police Department</li>
+                <li>🚒 Fire Department</li>
+                <li>🏥 Medical Department</li>
+                <li>💻 Tech Support Team</li>
+                <li>🔧 Moderation Team</li>
+            </ul>
+        </div>
+
+        <!-- Staff Section -->
+        <div class="staff">
+            <h2>Meet Our Amazing Staff</h2>
+            <p>Our server is run by a team of dedicated and friendly staff members. We’re always here to help make sure the community stays fun, safe, and welcoming for everyone.</p>
+        </div>
+
+        <!-- Footer Section -->
+        <div class="footer">
+            <p>© 2024 Our Discord Server | <a href="https://discord.gg/HEWuD588" style="color: white;">Join Us</a></p>
+        </div>
     </div>
 </body>
 </html>
