--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Our Discord Server</title>
+    <title>California Roleplay - Join Us!</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -48,7 +48,7 @@
             border-radius: 50%;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
-        .departments, .staff {
+        .departments, .staff, .recruitment {
             margin-top: 30px;
             text-align: left;
             padding: 20px;
@@ -68,39 +68,50 @@
         li {
             padding: 5px 0;
         }
+        .join-btn {
+            margin: 20px 0;
+            padding: 15px;
+            font-size: 18px;
+        }
     </style>
 </head>
 <body>
     <div class="container">
         <!-- Logo Section -->
-        <img src="https://cdn.discordapp.com/attachments/1303114419290509483/1303114456993370163/IMG_3465.webp?ex=672a9369&is=672941e9&hm=94a71225ac600cb35c7ae94a1ada9a40e4cad5e3b3b7678020461f8e37997053&" alt="Discord Server Logo">
+        <img src="https://cdn.discordapp.com/attachments/1303114419290509483/1303114456993370163/IMG_3465.webp?ex=672a9369&is=672941e9&hm=94a71225ac600cb35c7ae94a1ada9a40e4cad5e3b3b7678020461f8e37997053&" alt="California Roleplay Logo">
         
         <!-- Welcome Section -->
-        <h1>Welcome to Our Discord Server!</h1>
-        <p>Join our Discord community where we talk about games, coding, and have a lot of fun together!</p>
-        <a href="https://discord.gg/HEWuD588">Join Our Discord</a>
+        <h1>Welcome to California Roleplay!</h1>
+        <p>Join our roleplaying community where you can become part of law enforcement, have fun, and experience immersive roleplay scenarios in California.</p>
+        <a href="https://discord.gg/HEWuD588" class="join-btn">Join Our Discord</a>
 
         <!-- Departments Section -->
         <div class="departments">
             <h2>Our Departments</h2>
             <ul>
-                <li>🚓 Police Department</li>
-                <li>🚒 Fire Department</li>
-                <li>🏥 Medical Department</li>
-                <li>💻 Tech Support Team</li>
-                <li>🔧 Moderation Team</li>
+                <li>🚓 California Highway Patrol (Whitelisted)</li>
+                <li>🚔 California Sheriffs Department</li>
+                <li>👮‍♂️ Open Positions: Supervisors, Troopers, Division Leads</li>
             </ul>
         </div>
 
-        <!-- Staff Section -->
-        <div class="staff">
-            <h2>Meet Our Amazing Staff</h2>
-            <p>Our server is run by a team of dedicated and friendly staff members. We’re always here to help make sure the community stays fun, safe, and welcoming for everyone.</p>
+        <!-- Recruitment Section -->
+        <div class="recruitment">
+            <h2>Join California's Finest - Positions Available!</h2>
+            <p>We are hiring for the following roles:</p>
+            <ul>
+                <li><strong>Supervisors</strong>: Lead by example and guide officers to ensure safety on California’s highways.</li>
+                <li><strong>Troopers</strong>: Be the frontline defenders, enforcing traffic laws, and helping the public.</li>
+                <li><strong>Division Leads</strong>: Oversee specialized divisions and contribute to our mission.</li>
+            </ul>
+            <p>Ready to take on a leadership role and make a difference in California's law enforcement? Apply now and join our team!</p>
+            <a href="https://discord.gg/rcReqEVwu7" class="join-btn">Apply to CHP</a>
+            <a href="https://discord.gg/cHEzZudY" class="join-btn">Apply to Sheriff's Dept.</a>
         </div>
 
         <!-- Footer Section -->
         <div class="footer">
-            <p>© 2024 Our Discord Server | <a href="https://discord.gg/HEWuD588" style="color: white;">Join Us</a></p>
+            <p>© 2024 California Roleplay | Join Us: <a href="https://discord.gg/HEWuD588" style="color: white;">Discord Invite</a></p>
         </div>
     </div>
 </body>
