--- a/index.html
+++ b/index.html
@@ -48,10 +48,28 @@
             border-radius: 50%;
             box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
         }
-        .departments, .staff, .recruitment {
-            margin-top: 30px;
-            text-align: left;
-            padding: 20px;
+        .nav {
+            display: flex;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+        .nav button {
+            background-color: #7289DA;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            border-radius: 5px;
+            margin: 0 5px;
+            cursor: pointer;
+        }
+        .nav button:hover {
+            background-color: #5a6ebc;
+        }
+        .content {
+            display: none;
+        }
+        .active {
+            display: block;
         }
         .footer {
             margin-top: 50px;
@@ -68,43 +86,56 @@
         li {
             padding: 5px 0;
         }
-        .join-btn {
-            margin: 20px 0;
-            padding: 15px;
-            font-size: 18px;
-        }
     </style>
 </head>
 <body>
+
     <div class="container">
         <!-- Logo Section -->
         <img src="https://cdn.discordapp.com/attachments/1303114419290509483/1303114456993370163/IMG_3465.webp?ex=672a9369&is=672941e9&hm=94a71225ac600cb35c7ae94a1ada9a40e4cad5e3b3b7678020461f8e37997053&" alt="California Roleplay Logo">
-        
-        <!-- Welcome Section -->
-        <h1>Welcome to California Roleplay!</h1>
-        <p>Join our roleplaying community where you can become part of law enforcement, have fun, and experience immersive roleplay scenarios in California.</p>
-        <a href="https://discord.gg/HEWuD588" class="join-btn">Join Our Discord</a>
 
-        <!-- Departments Section -->
-        <div class="departments">
+        <!-- Navigation Menu -->
+        <div class="nav">
+            <button onclick="openTab('home')">Home</button>
+            <button onclick="openTab('staff')">Staff Team</button>
+            <button onclick="openTab('departments')">Departments</button>
+        </div>
+
+        <!-- Home Tab Content -->
+        <div id="home" class="content active">
+            <h1>Welcome to California Roleplay!</h1>
+            <p>Join our roleplaying community where you can become part of law enforcement, have fun, and experience immersive roleplay scenarios in California.</p>
+            <a href="https://discord.gg/HEWuD588" class="join-btn">Join Our Discord</a>
+        </div>
+
+        <!-- Staff Team Tab Content -->
+        <div id="staff" class="content">
+            <h2>Our Staff Team</h2>
+            <p>We have a dedicated and professional staff team to ensure the best roleplay experience for all members.</p>
+            <ul>
+                <li><strong>Owner:</strong> John Doe</li>
+                <li><strong>Co-Owner:</strong> Jane Smith</li>
+                <li><strong>Head Moderator:</strong> Alice Johnson</li>
+                <li><strong>Support Team:</strong> Bob Brown</li>
+            </ul>
+        </div>
+
+        <!-- Departments Tab Content -->
+        <div id="departments" class="content">
             <h2>Our Departments</h2>
             <ul>
                 <li>🚓 California Highway Patrol (Whitelisted)</li>
                 <li>🚔 California Sheriffs Department</li>
                 <li>👮‍♂️ Open Positions: Supervisors, Troopers, Division Leads</li>
             </ul>
-        </div>
 
-        <!-- Recruitment Section -->
-        <div class="recruitment">
             <h2>Join California's Finest - Positions Available!</h2>
             <p>We are hiring for the following roles:</p>
             <ul>
-                <li><strong>Supervisors</strong>: Lead by example and guide officers to ensure safety on California’s highways.</li>
-                <li><strong>Troopers</strong>: Be the frontline defenders, enforcing traffic laws, and helping the public.</li>
-                <li><strong>Division Leads</strong>: Oversee specialized divisions and contribute to our mission.</li>
+                <li><strong>Supervisors:</strong> Lead by example and guide officers to ensure safety on California’s highways.</li>
+                <li><strong>Troopers:</strong> Be the frontline defenders, enforcing traffic laws, and helping the public.</li>
+                <li><strong>Division Leads:</strong> Oversee specialized divisions and contribute to our mission.</li>
             </ul>
-            <p>Ready to take on a leadership role and make a difference in California's law enforcement? Apply now and join our team!</p>
             <a href="https://discord.gg/rcReqEVwu7" class="join-btn">Apply to CHP</a>
             <a href="https://discord.gg/cHEzZudY" class="join-btn">Apply to Sheriff's Dept.</a>
         </div>
@@ -114,5 +145,20 @@
             <p>© 2024 California Roleplay | Join Us: <a href="https://discord.gg/HEWuD588" style="color: white;">Discord Invite</a></p>
         </div>
     </div>
+
+    <script>
+        // Function to open different tabs
+        function openTab(tabName) {
+            // Hide all tab content
+            var tabs = document.getElementsByClassName("content");
+            for (var i = 0; i < tabs.length; i++) {
+                tabs[i].classList.remove("active");
+            }
+
+            // Show the selected tab content
+            document.getElementById(tabName).classList.add("active");
+        }
+    </script>
+
 </body>
 </html>
