--- a/index.html
+++ b/index.html
@@ -113,10 +113,10 @@
             <h2>Our Staff Team</h2>
             <p>We have a dedicated and professional staff team to ensure the best roleplay experience for all members.</p>
             <ul>
-                <li><strong>Owner:</strong> John Doe</li>
-                <li><strong>Co-Owner:</strong> Jane Smith</li>
-                <li><strong>Head Moderator:</strong> Alice Johnson</li>
-                <li><strong>Support Team:</strong> Bob Brown</li>
+                <li><strong>Owner:</strong> mom100xd</li>
+                <li><strong>Co-Owner:</strong> Benja and BEN</li>
+                <li><strong>Head Moderator:</strong> Preston3912221</li>
+                <li><strong>Support Team:</strong> demonmonkey385</li>
             </ul>
         </div>
 
